...
                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                            <color key="textColor" name="primaryText"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="La4-Gq-Y0Y" userLabel="Like Button">
                                                            <rect key="frame" x="292.66666666666669" y="0.0" width="68.333333333333314" height="58"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="likeButton" label="likeButton"/>
                                                            <fontDescription key="fontDescription" name=".SFNS-Regular" family=".AppleSystemUIFont" pointSize="1"/>
                                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                            <state key="normal" title=" " image="FavoritesActive">
                                                                <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            </state>
                                                            <buttonConfiguration key="configuration" style="plain" image="FavoritesActive" title=" ">
...
                                <connections>
                                    <outlet property="delegate" destination="cNx-MI-8yt" id="Tfp-e6-ROe"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bYH-Wa-Etd">
                                <rect key="frame" x="9" y="53" width="48" height="38"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBack"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="back">
                                    <color key="baseForegroundColor" name="primaryText"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="didTapBackButton:" destination="cNx-MI-8yt" eventType="touchUpInside" id="TZh-wf-HBt"/>
...
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="ZZT-rS-5HW" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="fwV-w8-4Yo">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E9L-Gc-xsc">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <color key="backgroundColor" name="ypWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="itc-s5-97u"/>
                                </constraints>
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="OWG-WY-nPx" customClass="WebViewViewController" customModule="ImageFeed" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="DNY-of-Yyn">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="5PP-a3-riy">
                                <rect key="frame" x="0.0" y="172" width="393" height="680"/>
                                <color key="backgroundColor" name="ypWhite"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
